Fix hover on Safari, new arrow size

--- a/src/app/pages/blog/blog.page.scss
+++ b/src/app/pages/blog/blog.page.scss
@@ -1,3 +1,18 @@
+a {
+  text-decoration: none;
+  z-index: 1;
+
+  &:hover > ion-card {
+    ion-card-title {
+      color: var(--ion-color-secondary);
+    }
+  }
+}
+
+post-info {
+  z-index: 2;
+}
+
 ion-card {
   height: 100%;
   padding-bottom: 48px;
