--- a/src/app/pages/blog/post/post.page.scss
+++ b/src/app/pages/blog/post/post.page.scss
@@ -19,7 +19,7 @@ ion-card {
 .arrow {
   position: absolute;
   top: 50%;
-  font-size: 50px;
+  font-size: 34px;
   z-index: 2;
   color: #ffffff;
 }
